# password-vault

./: .gitignore  god.hpp  gtkmm_glade.sublime-project  gtkmm_glade.sublime-workspace  gtkmm_glade_ui.glade  meson.build  opendb_page.cpp  password_list_manager.hpp
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  gtkmm_glade  password_vault
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
src/: app_controller.cpp  app_controller.hpp  god.cpp  god.hpp  main.cpp  opendb_page.hpp  password_list_manager.cpp  password_page.cpp  password_page.hpp
subprojects/pvdbmanager/: meson.build  pvdbmanager.sublime-workspace
subprojects/pvdbmanager/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
subprojects/pvdbmanager/builddir/meson-logs/: meson-log.txt
subprojects/pvdbmanager/builddir/meson-private/: coredata.dat.prev
subprojects/pvdbmanager/include/pvdbmanager/: database.hpp  db_manager.hpp
subprojects/pvdbmanager/src/: db_manager.cpp
subprojects/pvdbmanager/src/crypto/: Algorithms.hpp  aes_cipher.cpp  aes_cipher.hpp  cipher.hpp  util.hpp
